# CI-CD

./: pyproject.toml
app/: fix_me.py  old_style.py
