[project]
name = "ci-cd"
version = "0.1.0"
description = ""
authors = [
    {name = "Miroslav Dely",email = "miroslavdely@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)"
]

