[project]
name = "ci-cd"
version = "0.1.0"
description = ""
authors = [
    {name = "Miroslav Dely",email = "miroslavdely@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)"
]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (pep8)
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade (аналог pycodestyle improvements)
    "B",   # flake8-bugbear (частично mccabe/логика)
    "C90", # mccabe (цикломатическая сложность)
    "SIM", # flake8-simplify
    "PL",  # pylint (частично)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"app/old_style.py" = ["F401"]